--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div id="latest">
 
                 <h3 class="center">Currently the hottest genre right now is K-pop.</h3>
-                <img src="images/blackpink.png" alt="blackpink group together" class="center">
+                <img src="Images/blackpink.png" alt="blackpink group together" class="center">
                 <p class="center" id="welcome">Blackpink imaged above is one of the most popular K-pop groups in 2023.</p>
 
             </div>
