--- a/kpop.html
+++ b/kpop.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Emblema+One|Lora&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="images/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    <link rel="icon" sizes="192x192" href="images/android-chrome-192.png">
+    <link rel="shortcut icon" href="Images/favicon.ico">
+    <link rel="icon" type="Image/png" sizes="32x32" href="Images/favicon-32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Images/apple-touch-icon.png">
+    <link rel="icon" sizes="192x192" href="Images/android-chrome-192.png">
 </head>
 <body>
 
@@ -39,7 +39,7 @@
 
         <header>
             <div class="tab-desk">
-                <a href="index.html"><img src="images/kpopbanner.jpg" alt="The World of K-pop" class="responsive" width="5000"></a>
+                <a href="index.html"><img src="Images/kpopbanner.jpg" alt="The World of K-pop" class="responsive" width="5000"></a>
             </div>
             <div class="mobile">
                 <h1>Current Top Music</h1>
@@ -90,15 +90,15 @@
 
             <div id="latest">
                 <h2 class="center">Jimin</h2>
-                <img src="images/jimin.jpg" alt="Jimin of BTS" class="center">
+                <img src="Images/jimin.jpg" alt="Jimin of BTS" class="center">
                 <p class="center" id="welcome">Jimin is a member of BTS and holds the #1, 2 and 5 spots on Spotify top 50 K-pop.</p>
 
                 <h2 class="center">Jung Kook</h2>
-                <img src="images/jungkook.jpg" alt="Jung Kook of BTS" class="center">
+                <img src="Images/jungkook.jpg" alt="Jung Kook of BTS" class="center">
                 <p class="center" id="welcome">Jung Kook is a member of BTS and holds multiple Spotify top 50 K-pop spots ranging from #3 to #16.</p>
 
                 <h2 class="center">NewJeans</h2>
-                <img src="images/newjeans.jpg" alt="blackpink group together" class="center">
+                <img src="Images/newjeans.jpg" alt="blackpink group together" class="center">
                 <p class="center" id="welcome">NewJeans is a popular group that has held many top spots but they currently sit at #31 on Spotify top 50 K-pop.</p>
             </div>
 
@@ -113,11 +113,11 @@
 
           <div class="social">
             <a href="https://www.facebook.com/" target="_blank">
-            <img src="images/facebook-logo.png" alt="Blue and white Facebook logo">
+            <img src="Images/facebook-logo.png" alt="Blue and white Facebook logo">
             </a>
 
             <a href="https://www.twitter.com/" target="_blank">
-            <img src="images/twitter-logo.png" alt="Blue and white Twitter logo">
+            <img src="Images/twitter-logo.png" alt="Blue and white Twitter logo">
             </a>
           </div>
 
