--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Emblema+One|Lora&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="images/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    <link rel="icon" sizes="192x192" href="images/android-chrome-192.png">
+    <link rel="shortcut icon" href="Images/favicon.ico">
+    <link rel="icon" type="Image/png" sizes="32x32" href="Images/favicon-32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Images/apple-touch-icon.png">
+    <link rel="icon" sizes="192x192" href="Images/android-chrome-192.png">
 </head>
 <body>
 
@@ -133,11 +133,11 @@
 
           <div class="social">
             <a href="https://www.facebook.com/" target="_blank">
-            <img src="images/facebook-logo.png" alt="Blue and white Facebook logo">
+            <img src="Images/facebook-logo.png" alt="Blue and white Facebook logo">
             </a>
 
             <a href="https://www.twitter.com/" target="_blank">
-            <img src="images/twitter-logo.png" alt="Blue and white Twitter logo">
+            <img src="Images/twitter-logo.png" alt="Blue and white Twitter logo">
             </a>
           </div>
 
