--- a/rock.html
+++ b/rock.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Emblema+One|Lora&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="images/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    <link rel="icon" sizes="192x192" href="images/android-chrome-192.png">
+    <link rel="shortcut icon" href="Images/favicon.ico">
+    <link rel="icon" type="Image/png" sizes="32x32" href="Images/favicon-32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Images/apple-touch-icon.png">
+    <link rel="icon" sizes="192x192" href="Images/android-chrome-192.png">
 </head>
 <body>
 
@@ -39,7 +39,7 @@
 
         <header>
             <div class="tab-desk">
-                <a href="index.html"><img src="images/rockbanner.jpg" alt="The World of Rock" class="responsive" width="5000"></a>
+                <a href="index.html"><img src="Images/rockbanner.jpg" alt="The World of Rock" class="responsive" width="5000"></a>
             </div>
             <div class="mobile">
                 <h1>Current Top Music</h1>
@@ -88,15 +88,15 @@
 
             <div id="latest">
                 <h2 class="center">Maneskin</h2>
-                <img src="images/maneskin.jpg" alt="maneskin band" class="center">
+                <img src="Images/maneskin.jpg" alt="maneskin band" class="center">
                 <p class="center" id="welcome">This band currently has the #3 most popular rock song on Spotify 2023.</p>
 
                 <h2 class="center">Bad Omens</h2>
-                <img src="images/badomens.jpg" alt="bad omens" class="center">
+                <img src="Images/badomens.jpg" alt="bad omens" class="center">
                 <p class="center" id="welcome">This band currently has the #5 most popular rock song on Spotify 2023.</p>
 
                 <h2 class="center">Falling In Reverse</h2>
-                <img src="images/fallinginreverse.jpg" alt="blackpink group together" class="center">
+                <img src="Images/fallinginreverse.jpg" alt="blackpink group together" class="center">
                 <p class="center" id="welcome">This band currently has the #7 most popular rock song on Spotify 2023.</p>
             </div>
 
@@ -111,11 +111,11 @@
 
           <div class="social">
             <a href="https://www.facebook.com/" target="_blank">
-            <img src="images/facebook-logo.png" alt="Blue and white Facebook logo">
+            <img src="Images/facebook-logo.png" alt="Blue and white Facebook logo">
             </a>
 
             <a href="https://www.twitter.com/" target="_blank">
-            <img src="images/twitter-logo.png" alt="Blue and white Twitter logo">
+            <img src="Images/twitter-logo.png" alt="Blue and white Twitter logo">
             </a>
           </div>
 
