--- a/rap.html
+++ b/rap.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Emblema+One|Lora&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" href="images/favicon.ico">
+        <link rel="shortcut icon" href="Images/favicon.ico">
         <link rel="icon" type="Image/png" sizes="32x32" href="Images/favicon-32.png">
         <link rel="apple-touch-icon" sizes="180x180" href="Images/apple-touch-icon.png">
         <link rel="icon" sizes="192x192" href="Images/android-chrome-192.png">
