--- a/randb.html
+++ b/randb.html
@@ -37,7 +37,7 @@
             
             <header>
                 <div class="tab-desk">
-                  <a href="index.html"><img src="Images/r&bbanner.jpg" alt="The World of R&B" class="responsive" width="5000" ></a>
+                  <a href="index.html"><img src="Images/r_bbanner.jpg" alt="The World of R&B" class="responsive" width="5000" ></a>
                 </div>
                 <div class="mobile">
                     <h1>Current Top Music</h1>
